Changelog
=========

1.1.2 (unreleased)
------------------

- Sort facet fields in the order specified in the Solr control panel.
  [buchi]

- Fixed handling of path filter which was always removed when respect_navroot
  is set to False.
  [buchi]

- Handle invalid facet parameters.
  [buchi]


1.1.1 (2013-06-01)
------------------

- Also use livesearch request handler in livesearch when grouping is disabled.
  [buchi]

- Fixed "show more" link in live search to point to @@search view.
  [buchi]


1.1 (2013-05-31)
----------------

- Reorganized monkey patches.
  Everything patch-related now lives in the patches subpackage.
  [lgraf]

- Make sure @@search view doesn't fail when called without parameters.
  [lgraf]

- Only display selected facets list if there actually are selected facets.
  [lgraf]

- Added spellchecking feature (aka "Did you mean ...").
  [buchi]

- Made respecting the navroot for searches configurable.
  Only if `ISearchSettings.respect_navroot` is set searches will be constrained
  to the navigation root (defaults to False).
  [lgraf]

- Added autocomplete support based on Solr's suggester component.
  [buchi]


1.0.2 (2013-05-28)
------------------

- Fixed querytarget of livesearch for Plone 4.2 and later.
  Use our @@livesearch_reply view instead of livesearch_reply.
  [buchi]

- Include description in snippetText.
  [buchi]

- If there's a SearchableText indexer, use it for snippetText generation.
  [buchi]

- Make length of breadcrumbs shown in search results configurable.
  [buchi]

- Added option to generate breadcrumbs from path rather than calling
  breadcrumbs_view for each item.
  [buchi]

- Added support for dexterity content types in snippetText indexer.
  [buchi]


1.0.1 (2013-05-21)
------------------

- Monkey patching c.solr.search.Search.buildQuery in order to escape slahes in paths.
  [lgraf]

- Overwrite search extender: Add write permissions, fixed translations and
  allowed content types in textfield.
  [Julian Infanger]
